--- a/build.gradle
+++ b/build.gradle
@@ -21,3 +21,5 @@ dependencies {
 	runtimeOnly 'com.h2database:h2'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
+
+project.tasks["sonarqube"].dependsOn "testClasses"
