--- a/build.gradle
+++ b/build.gradle
@@ -21,3 +21,17 @@ dependencies {
 	runtimeOnly 'com.h2database:h2'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
+
+sonarqube {
+	properties {
+		property "sonar.host.url", "https://sonarcloud.io"
+		property "sonar.projectName", "ApiLogbook"
+		property 'sonar.login','82dca17921a4a4c17a146dd2299d3965dcda8e9e'
+		property "sonar.organization", "dceballosa_curso"
+		property "sonar.java.source", "8"
+		property "sonar.issuesReport.html.enable", "true"
+		property "sonar.scm.disabled", "true"
+		property "sonar.java.coveragePlugin", "jacoco"
+		property "sonar.jacoco.reportPath", "$buildDir/jacoco/test.exec"
+	}
+}
